Module 01/Mod01 Assignments/01.05 Student Information/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.11.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;C:\Users\Frankie\Desktop\APCS\Module 01\Mod01 Assignments\01.05 Student Information
-d
C:\Users\Frankie\Desktop\APCS\Module 01\Mod01 Assignments\01.05 Student Information\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\Frankie\Desktop\APCS\Module 01\Mod01 Assignments\01.05 Student Information\StudentInfoCard.java
<---- end of javadoc command ---->
Loading source file C:\Users\Frankie\Desktop\APCS\Module 01\Mod01 Assignments\01.05 Student Information\StudentInfoCard.java...
C:\Users\Frankie\Desktop\APCS\Module 01\Mod01 Assignments\01.05 Student Information\StudentInfoCard.java:10: error: ';' expected
   public static void main(String[ ] args)) {
                                          ^
1 error
